@@ -19,7 +19,7 @@
 # You should have received a copy of the GNU General Public License
 # along with cygport.  If not, see <http://www.gnu.org/licenses/>.
 #
-# $Id: cygport.in,v 1.99 2008-02-15 16:08:36 yselkowitz Exp $
+# $Id: cygport.in,v 1.100 2008-02-19 02:40:18 yselkowitz Exp $
 #
 ################################################################################
 
@@ -427,6 +427,7 @@ readonly -f check_prog check_prog_req __check_function __check_unstable __versio
 #
 # mutable:
 #	USE_MANAGED_MOUNT
+#	src_patch_hook()
 #	src_unpack_hook()
 #
 # public:
@@ -792,6 +793,13 @@ __src_prep() {
 	do
 		cygpatch ${top}/${src_patch};
 	done
+
+	# similar to src_unpack_hook(), but is called after SRC_PATCH patches
+	# useful for changing permissions, etc., on patched files
+	if __check_function src_patch_hook
+	then
+		__check_unstable src_patch_hook;
+	fi
 
 	__step "Preparing working source directory";
 
